--- a/config/arancino.cfg.yml
+++ b/config/arancino.cfg.yml
@@ -39,7 +39,7 @@ redis:
   #          volatile: data, reserved key, time series;
   #          persistent: device, persistent data, time series tags, settings;
   #
-  instance_type: VOLATILE_PERSISTENT
+  instance_type: VOLATILE
 
 
   #  Number of connection attempts to Redis Server, one attempt every 3 second
@@ -147,7 +147,7 @@ port:
   serial:
     
     # Enables discovery on serial port type
-    discovery: True
+    discovery: false
 
     mcu_type_list:
       - samd21
@@ -190,12 +190,14 @@ port:
     #   - 0x1915:0x521F - A3000 (aka Arancino Volante) (NRF52)
     #   - 0x2E8A:0x000A - A4000 (aka Arancino Pico) (RP2040)
     #   - 0x0483:0x5740 - A6000-A7000-A8000 (aka Arancino V*) (STM32)
+    
+    # Xs need to be upper-case
     filter_list:
-      - "0x04D8:0xECD9"
-      - "0x04D8:0xECDA"
-      - "0x1915:0x521F"
-      - "0x2E8A:0x000A"
-      - "0x0483 0x5740"
+      - "0X04D8:0XECD9"
+      - "0X04D8:0XECDA"
+      - "0X1915:0X521F"
+      - "0X2E8A:0X000A"
+      - "0X0483:0X5740"
 
 
     # Timeout in seconds in serial connection Min: 1
@@ -218,12 +220,21 @@ port:
     # Queue size for buffering commands
     queue_max_size: 1024
 
+    # time (in seconds) between each heartbeat check
+    heartbeat_rate: 5
+
+    # time threshold (in milliseconds) between to heartbeat #1 and #2 used to evaluate the healty of the system
+    heartbeat_time: 10
+
+    # number of heartbeat checks, when no heartbeat is detected, before send alert.
+    heartbeat_attempts: 5
+
 
     # Specific configurations for the SAMD21 microcontoller.
     samd21:
       list: #list of possible vid:pid
-        - "0x04D8:0xECDA"
-        - "0x04D8:0xECD9"
+        - "0X04D8:0XECDA"
+        - "0X04D8:0XECD9"
       upload_command: "/usr/bin/run-arancino-bossac {port._device} {firmware}"
       reset_on_connect: true
       reset_reconnection_delay: 5
@@ -233,7 +244,7 @@ port:
     # Specific configurations for the NRF52 microcontoller.
     nrf52:
       list: #list of possible vid:pid
-        - "0x1915:0x521F"
+        - "0X1915:0X521F"
       upload_command: "/usr/bin/adafruit-nrfutil dfu serial -pkg {firmware} -p {port._device} -b 115200 --singlebank"
       reset_on_connect: true
       reset_reconnection_delay: 40
@@ -243,7 +254,7 @@ port:
     # Specific configurations for the STM32 microcontoller.
     stm32:
       list: #list of possible vid:pid
-        - "0x0483:0x5740"
+        - "0X0483:0X5740"
       upload_command: "/usr/bin/run-arancino-arduinoSTM32load {port._device} {firmware}"
       reset_on_connect: true
       reset_reconnection_delay: 5
@@ -253,7 +264,7 @@ port:
     # Specific configurations for the RP20 microcontoller.
     rp20:
       list: #list of possible vid:pid
-        - "0x2E8A:0x000A"
+        - "0X2E8A:0X000A"
       upload_command: "/usr/bin/run-arancino-uf2conv {port._device} {firmware}"
       reset_on_connect: true
       reset_reconnection_delay: 5
@@ -262,10 +273,11 @@ port:
 
   test:
 
+    discovery: true
 
-    auto_enable: True
+    auto_enable: true
 
-    hide: True
+    hide: true
 
     filter_type: ALL
 
@@ -276,7 +288,7 @@ port:
     upload_command: null
 
 
-    # The number of Oort to create for test purpose
+    # The number of Port to create for test purpose
     num: 0
 
     # Delay between each command in seconds (accepts float)
@@ -286,12 +298,21 @@ port:
     # prefix of the id generated for the test port
     id_template: TESTPORT
 
+    # time (in seconds) between each heartbeat check
+    heartbeat_rate: 5
+
+    # time threshold (in milliseconds) between to heartbeat #1 and #2 used to evaluate the healty of the system
+    heartbeat_time: 10
+
+    # number of heartbeat checks, when no heartbeat is detected, before send alert.
+    heartbeat_attempts: 5
+
 
   mqtt:
 
   
     # Enables discovery on mqtt port type
-    discovery: true
+    discovery: false
 
     # Automatically enables (and connect) a new discovered Port.
     auto_enable: true
@@ -305,7 +326,7 @@ port:
     # Reset port on connection
     reset_on_connect: false
 
-    filter_type: ALL
+    filter_type: "ALL"
     filter_list: []
 
     # Mqtt-Bus Broker Connection Parameters
@@ -317,11 +338,11 @@ port:
       password: 12345678
       client_id: 87654321
       # Topic that will be used for discovery process
-      discovery_topic: arancino/discovery/87654321
+      discovery_topic: arancino/discovery
       # Topic that will be used for both send and receive (in relative subtopics)
-      cortex_topic: arancino/cortex/87654321
+      cortex_topic: arancino/cortex
       # Topic that will be used for mcu reset process
-      service_topic: arancino/service/87654321
+      service_topic: arancino/service
 
     # time (in seconds) between each heartbeat check
     heartbeat_rate: 5
@@ -332,7 +353,7 @@ port:
     # number of heartbeat checks, when no heartbeat is detected, before send alert.
     heartbeat_attempts: 5
 
-  ble:
+  uart_ble:
 
     # Enables discovery on mqtt port type
     discovery: true
@@ -354,7 +375,6 @@ port:
 
     # command to be spawn when upload api is called. The command could have one or more placeholders.
     upload_command: nrfutil ...
-
     # time (in seconds) between each heartbeat check
     heartbeat_rate: 5
 
@@ -407,7 +427,7 @@ log:
 
   # Available Log Handlers, sets to true to enable or false to disable
   # Console Handler
-  handler_console: false
+  handler_console: true
 
 
   # File Handler
@@ -418,7 +438,7 @@ log:
   size: 1
 
   # Number of files to use in rotate mode. Min: 1, Max: 10, Default: 1
-  rotate: 5
+  rotate: 1
 
   # Names of log files
   # Standard Log File
