--- a/requirements.txt
+++ b/requirements.txt
@@ -22,4 +22,6 @@ Werkzeug>=2.0.3
 ruamel.yaml>=0.17.21
 pyyaml>=6.0
 adafruit-circuitpython-ble>=8.3.8
-bleak>=0.14.3
+bleak==0.14.3
+msgpack>=1.0.3
+setuptools>=67.4.0
