--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ formats = gztar
 
 [metadata]
 name = arancino
-version = 2.5.1
+version = 2.7.0
 description = Arancino Daemon for Arancino Library
 author = Sergio Tomasello
 author_email = sergio@smartme.io
@@ -37,6 +37,7 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.8
     Topic :: Software Development :: Libraries :: Python Modules
     Topic :: System :: Archiving :: Packaging
     Topic :: System :: Systems Administration
@@ -47,23 +48,33 @@ zip_safe = False
 include_package_data = True
 packages = find:
 install_requires =
-    pyserial==3.4
-    redis==2.10.6
-    redistimeseries==1.4.3
-    setuptools==41.4.0
-    semantic-version==2.8.4
-    uptime==3.0.1
-    Flask==2.0.3
-    Flask_HTTPAuth==4.5.0
-    requests==2.23.0
-    netifaces==0.10.9
-    gunicorn==20.0.4
-    Jinja2==2.11.2
-    paho-mqtt==1.5.1
-    adafruit-circuitpython-ble==8.0.3
-    pyyaml>=6.0
+    certifi>=2021.10.8
+    chardet>=3.0.4
+    click>=8.1.3
+    Flask>=2.0.3
+    Flask-HTTPAuth>=4.5.0
+    gunicorn>=20.0.4
+    hiredis>=2.0.0
+    idna>=2.10
+    itsdangerous>=2.1.1
+    Jinja2>=3.0.3
+    MarkupSafe>=2.0.1
+    netifaces>=0.10.9
+    paho-mqtt>=1.5.1
+    pyserial>=3.5
+    redis>=4.3.4
+    requests>=2.26.0
+    rmtest>=0.7.0
+    semantic-version>=2.10.0
+    uptime>=3.0.1
+    urllib3>=1.25.11
+    Werkzeug>=2.0.3
     ruamel.yaml>=0.17.21
-    msgpack==1.0.3
+    pyyaml>=6.0
+    adafruit-circuitpython-ble>=8.3.8
+    bleak==0.14.3
+    msgpack>=1.0.3
+    setuptools>=67.4.0
     
 python_requires = >= 3.5
 
