--- a/config/arancino.dev.cfg.yml
+++ b/config/arancino.dev.cfg.yml
@@ -150,7 +150,7 @@ port:
   serial:
     
     # Enables discovery on serial port type
-    discovery: true
+    discovery: false
 
     mcu_type_list:
       - samd21
@@ -315,7 +315,7 @@ port:
 
   
     # Enables discovery on mqtt port type
-    discovery: false
+    discovery: true
 
     # Automatically enables (and connect) a new discovered Port.
     auto_enable: true
@@ -340,6 +340,12 @@ port:
       username: arancino-daemon
       password: 12345678
       client_id: 87654321
+
+      use_tls: false
+      ca_path : ""
+      cert_path: ""
+      key_path: ""
+
       # Topic that will be used for discovery process
       discovery_topic: arancino/discovery
       # Topic that will be used for both send and receive (in relative subtopics)
