--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ netifaces>=0.10.9
 paho-mqtt>=1.5.1
 pyserial>=3.5
 redis>=4.5.5
-requests>=2.26.0
+requests==2.23.0
 rmtest>=0.7.0
 semantic-version>=2.10.0
 uptime>=3.0.1
@@ -22,6 +22,7 @@ Werkzeug>=2.0.3
 ruamel.yaml>=0.17.21
 pyyaml>=6.0
 adafruit-circuitpython-ble>=8.3.8
-bleak==0.14.3
+bleak==0.11.0
 msgpack>=1.0.3
-setuptools>=67.4.0
+setuptools==57.0.0
+transitions==0.9.0
