--- a/config/arancino.dev.cfg.yml
+++ b/config/arancino.dev.cfg.yml
@@ -332,6 +332,8 @@ port:
     filter_type: "ALL"
     filter_list: []
 
+    queue_size : 8
+
     # Mqtt-Bus Broker Connection Parameters
     connection:
 
