Issue #123: Problematica QoS 0 mid, commentato fix issue #117

--- a/config/arancino.cfg.yml
+++ b/config/arancino.cfg.yml
@@ -332,7 +332,8 @@ port:
     filter_type: "ALL"
     filter_list: []
 
-    queue_size : 8
+    # ! Issue : 123
+    # queue_size : 8
 
     # Mqtt-Bus Broker Connection Parameters
     connection:
