--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,15 +9,33 @@
 #                   REPO_USR:       nome utente del associato a dev ops per effettuare upload dell'artefatto
 #                   REPO_PWD:       password associata all'utente dev ops
 #                   REPO_BASE_URL:  url di base del repository: https://packages.smartme.io
-#
+#                   DOCKER_HOST: indica il Docker deamon al quale connettersi per effettuare la build 
+#                   DOCKER_DRIVER: definiamo il driver di storage per Docker
+#                   DOCKER_TLS_CERTDIR: in questo modo autentichiamo la connessione con il demone docker utilizzando i certificati TLS
+#                   DCK_IMAGE_NAME: contiene il nome dell'immagine
+
 
 image: smartmeio/python:3.9-alpine3.10
 
 stages:
   - start
   - package
+  - docker
   - upload
   - cleanup
+
+default:
+  services:
+    - name: docker:23-dind
+      alias: thedockerhost
+
+variables:
+  #Docker deamon è attivo sull'host chiamato "thedockerhost che ascolta sulla porta 2375, la porta di default del Docker daemon"
+  DOCKER_HOST: tcp://thedockerhost:2375/ 
+  #Il driver overlay2 è comunemente usato per gestire i livelli di immagini e lo storage su un sistema Docker. 
+  DOCKER_DRIVER: overlay2
+  DOCKER_TLS_CERTDIR: ""
+  DCK_IMAGE_NAME: smartmeio/arancino-daemon
 
 #################################
 #######       START       #######
@@ -73,16 +91,16 @@ push:
     - eval `python3 check-version.py ${CI_COMMIT_TAG}`
 
   script:
-    #- apk add git
+    - apk add git
     - git remote add github https://$GITHUB_BOT_USERNAME:$GITHUB_ACCESS_TOKEN@github.com/$GITHUB_DEST_REPO
-    #- git remote show github
-    #- git remote show origin
-    #- git branch -a
+    - git remote show github
+    - git remote show origin
+    - git branch -a
     - git checkout $CI_COMMIT_TAG
     - git fetch github
-    #- git push github $CI_COMMIT_REF_NAME --force
+    - git push github $CI_COMMIT_REF_NAME --force
     - >
-      if [[ ${PRE_RELEASE} == "test"  ]]; then
+     # if [[ ${PRE_RELEASE} == "test"  ]]; then
         echo "not performing TAG push";
       else
         git push github ${CI_COMMIT_TAG}
@@ -127,6 +145,33 @@ package:
     - tags
 
 
+#################### Docker Build #############
+####################              #############
+docker_alpine_build:
+  stage: docker
+  image: docker:23
+  before_script:
+    - echo -n "$DCK_TOKEN" | docker login --username "$DCK_USER" --password-stdin
+  script:
+    - DCK_TAG=${CI_COMMIT_TAG}-alpine
+    - docker buildx create --use
+    - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -f Dockerfile-alpine-arancino.dockerfile -t $DCK_IMAGE_NAME:$DCK_TAG --push .
+
+  only:
+    - tags
+
+docker_debian_build:
+  stage: docker
+  image: docker:23
+  before_script:
+    - echo -n "$DCK_TOKEN" | docker login --username "$DCK_USER" --password-stdin
+  script:
+    - DCK_TAG=${CI_COMMIT_TAG}-debian
+    - docker buildx create --use
+    - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -f Dockerfile-debian-arancino.dockerfile -t $DCK_IMAGE_NAME:$DCK_TAG --push .
+  
+  only:
+    - tags
 
 #################################
 #######       UPLOAD      #######
@@ -164,7 +209,7 @@ cleanup:
     stage: cleanup
 
     variables:
-        GIT_STRATEGY: none
+       # GIT_STRATEGY: none
 
     script:
         - echo "Cleaning up"
