--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -168,7 +168,7 @@ docker_debian_build:
   script:
     - DCK_TAG=${CI_COMMIT_TAG}-debian
     - docker buildx create --use
-    - docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -f Dockerfile-debian-arancino.dockerfile -t $DCK_IMAGE_NAME:$DCK_TAG --push .
+    - docker buildx build --network=host --platform linux/amd64,linux/arm64,linux/arm/v7 -f Dockerfile-debian-arancino.dockerfile -t $DCK_IMAGE_NAME:$DCK_TAG --push .
   
   only:
     - tags
