--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -165,10 +165,10 @@ docker_alpine_build:
         echo "not performing TAG latest";
       else
         DCK_TAG=latest
-        docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -f Dockerfile-alpine-arancino.dockerfile -t $DCK_IMAGE_NAME:$DCK_TAG --push .
+        docker buildx build --platform linux/amd64,linux/arm64 -f Dockerfile-alpine-arancino.dockerfile -t $DCK_IMAGE_NAME:$DCK_TAG --push .
         
         DCK_TAG=${CI_COMMIT_TAG}
-        docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -f Dockerfile-alpine-arancino.dockerfile -t $DCK_IMAGE_NAME:$DCK_TAG --push .
+        docker buildx build --platform linux/amd64,linux/arm64 -f Dockerfile-alpine-arancino.dockerfile -t $DCK_IMAGE_NAME:$DCK_TAG --push .
       fi
 
   only:
