--- a/docker/debian/Dockerfile
+++ b/docker/debian/Dockerfile
@@ -8,6 +8,13 @@ ARG gid=1000
 ARG ARANCINO_HOME=/home/me
 
 ENV TZ 'Europe/Rome'
+ENV ARANCINO_HOME $ARANCINO_HOME
+ENV ARANCINO=/etc/arancino
+ENV ARANCINOCONF=/etc/arancino/config
+ENV ARANCINOLOG=/var/log/arancino
+ENV ARANCINOENV=PROD
+ENV FLASK_ENV=production
+
 
 # Jenkins is run with user `jenkins`, uid = 1000
 # If you bind mount a volume from the host or a data container,
@@ -37,34 +44,14 @@ RUN  echo "deb https://packages.smartme.io/repository/arancino-os-buster/ buster
 
 RUN apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-        vim wget nano curl arduinostm32load \
-        build-essential nano telnet net-tools  \
-        systemd systemd-sysv bash-completion apt-utils \
+        arduinostm32load \
+        build-essential net-tools  \
+        systemd systemd-sysv apt-utils \
         openocd avrdude dfu-util-stm32 bossa-cli \
         ca-certificates ca-cacert libssl-dev libyaml-dev \
         bluez \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* 
-
-RUN wget -qO- https://bootstrap.pypa.io/pip/get-pip.py | python3
-
-COPY ./extras/pip.conf /etc/pip.conf
-
-# Create a temporary directory in the Docker image
-WORKDIR /tmp
-
-# Copy the contents of tmp from the build context to the Docker image
-COPY tmp/ .
-
-# Estraggo il nome del file da pgk_name.txt
-RUN ARANCINO_PACKAGE_FILE_DEBIAN=$(cat pgk_name.txt) \
-    && echo "Using Arancino package file: $ARANCINO_PACKAGE_FILE_DEBIAN" \
-    && pip3 install -v --no-cache-dir "$ARANCINO_PACKAGE_FILE_DEBIAN" adafruit-nrfutil
-
-
-COPY ./config/arancino.cfg.yml /etc/arancino/config/arancino.cfg.yml
-COPY ./config/arancino.dev.cfg /etc/arancino/config/arancino.dev.cfg
-
 
 # copying upload tool scripts
 COPY ./extras/run-arancino-bossac.sh /usr/bin/run-arancino-bossac
@@ -76,12 +63,30 @@ COPY ./extras/uf2conv.py /usr/bin/uf2conv.py
 RUN chmod +x /usr/bin/run-arancino-*
 RUN chmod +x /usr/bin/uf2conv.py
 
-# Jenkins home directory is a volume, so configuration and build history
-# can be persisted and survive image upgrades
-VOLUME $ARANCINO_HOME
+COPY ./extras/pip.conf /etc/pip.conf
 
-# USER ${user}
+# # Estraggo il nome del file da pgk_name.txt
+# RUN ARANCINO_PACKAGE_FILE_DEBIAN=$(cat pgk_name.txt) \
+#     && echo "Using Arancino package file: $ARANCINO_PACKAGE_FILE_DEBIAN" \
+#     && pip3 install -v --no-cache-dir "$ARANCINO_PACKAGE_FILE_DEBIAN" adafruit-nrfutil
+
+
+WORKDIR $ARANCINO_HOME/src
+
+COPY . $ARANCINO_HOME/src
+
+RUN pip3 install -r ./requirements.txt
+
+RUN pip3 install . && pip3 cache purge 
+RUN rm -r $ARANCINO_HOME/src
+
+
+COPY ./config/arancino.cfg.yml /etc/arancino/config/arancino.cfg.yml
+COPY ./config/arancino.dev.cfg /etc/arancino/config/arancino.dev.cfg
+COPY ./config/gunicorn.cfg.py /etc/arancino/config/gunicorn.cfg.py
 
 WORKDIR $ARANCINO_HOME
 
 EXPOSE 1475
+
+ENTRYPOINT ["gunicorn","-c","/etc/arancino/config/gunicorn.cfg.py","arancino.ArancinoStart:app"]
