--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,46 @@
-certifi>=2021.10.8
-chardet>=3.0.4
-click>=8.1.3
-Flask>=2.0.3
-Flask-HTTPAuth>=4.5.0
-gunicorn>=20.0.4
-hiredis>=2.0.0
-idna>=2.10
-itsdangerous>=2.1.1
-Jinja2>=3.0.3
-MarkupSafe>=2.0.1
-netifaces>=0.10.9
-paho-mqtt>=1.5.1
-pyserial>=3.5
-redis>=4.5.5
-requests>=2.26.0
-rmtest>=0.7.0
-semantic-version>=2.10.0
-uptime>=3.0.1
-urllib3>=1.25.11
-Werkzeug>=2.0.3
-ruamel.yaml>=0.17.21
-pyyaml>=6.0
-adafruit-circuitpython-ble>=8.3.8
+Adafruit-Blinka==8.32.0
+adafruit-blinka-bleio==4.1.0
+adafruit-circuitpython-ble==10.0.5
+adafruit-circuitpython-busdevice==5.2.6
+adafruit-circuitpython-connectionmanager==1.0.0
+adafruit-circuitpython-requests==3.0.0
+adafruit-circuitpython-typing==1.10.2
+adafruit-nrfutil==0.5.3.post16
+Adafruit-PlatformDetect==3.60.0
+Adafruit-PureIO==1.1.11
+async-timeout==4.0.3
 bleak==0.14.3
-msgpack>=1.0.3
-setuptools>=67.4.0
+blinker==1.7.0
+certifi==2024.2.2
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+dbus-next==0.2.3
+ecdsa==0.18.0
+Flask==3.0.2
+Flask-HTTPAuth==4.8.0
+gunicorn==21.2.0
+hiredis==2.3.2
+idna==3.6
+importlib-metadata==7.0.1
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+msgpack==1.0.7
+netifaces==0.11.0
+packaging==23.2
+paho-mqtt==2.0.0
+pyftdi==0.55.0
+pyserial==3.5
+pyusb==1.2.1
+PyYAML==6.0.1
+redis==5.0.1
+requests==2.31.0
+rmtest==0.7.0
+semantic-version==2.10.0
+six==1.16.0
+typing_extensions==4.0.1
+uptime==3.0.1
+urllib3==2.2.1
+Werkzeug==3.0.1
+zipp==3.17.0
