--- a/setup.cfg
+++ b/setup.cfg
@@ -60,7 +60,7 @@ install_requires =
     Jinja2>=3.0.3
     MarkupSafe>=2.0.1
     netifaces>=0.10.9
-    paho-mqtt>=1.5.1
+    paho-mqtt==1.6.1
     pyserial>=3.5
     redis>=4.3.4
     requests>=2.26.0
