--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -100,7 +100,7 @@ push:
     - git fetch github
     - git push github $CI_COMMIT_REF_NAME --force
     - >
-     # if [[ ${PRE_RELEASE} == "test"  ]]; then
+      if [[ ${PRE_RELEASE} == "test"  ]]; then
         echo "not performing TAG push";
       else
         git push github ${CI_COMMIT_TAG}
